newsapi data in my browser

--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
 </head>
 <body>
     <h1>H E L L O    W O R L D !</h1>
-    <div class="news-info"></div>
-    <p>This is found at https://newsapi.org/</p>
+
+    <!---  Search  box  here  --->
+    <form>
+        <input type="search" name="search" id="">
+        <input type="submit" value="submit">
+    </form>
+
+
+    <div class="top-news">
+
+    </div>
+    
+
+
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
