--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
     <!---  Search  box  here  --->
     <form>
-        <input type="search" name="search" id="">
-        <input type="submit" value="submit">
+        <input type="search" name="search" id="search">
+        <input type="submit" value="View Headlines" id="submit">
     </form>
 
+    <button id="update">Update News</button>
         <!---  Top News here  --->
 
     <div class="top-news">
