--- a/index.html
+++ b/index.html
@@ -12,18 +12,26 @@
 
     <!---  Search  box  here  --->
     <form>
-        <input type="search" name="search" id="search">
-        <input type="submit" value="View Headlines" id="submit">
+        <input type="search" name="search" id="search" placeholder="Search">
+        <input type="submit" value="Search Now" id="submit">
     </form>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <button id="update">Update News</button>
         <!---  Top News here  --->
 
-    <div class="top-news">
-
+    <div class="centerAndSide">
+        <div class="top-news">
+            
+        </div>
+        <aside id="sidebox">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </aside>
     </div>
-    
-
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
