I have wrote some css body, header and top-news div

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>H E L L O    W O R L D !</h1>
+    <header>
+            <h1>Hello World !</h1>
+    </header>
 
     <!---  Search  box  here  --->
     <form>
