I wish I had more time.

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <button id="update">Update News</button>
         <!---  Top News here  --->
 
-    <div class="centerAndSide">
-        <div class="top-news">
+  <main class="centerAndSide">
+        <!--  <div class="top-news">
             <h1>Welcome</h1>
             <h1>What do you want to know today ?
             </h1>
             <h4>Search anything in the search box.</h4>
             <h4>Get the Headlines by tapping update button.</button></h4>
-        </div>
+        </div>-->
         <aside id="sidebox">
             <h4>Share your story with us!</h4>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -45,13 +45,13 @@
                 <li><a href="https://newsapi.org/">Source</a></li>
             </ul>
         </aside>
-    </div>
+  </main>
 
-    <footer>
+    <!--<footer>
         <div id="footnote">
             <h3>Mohammad @ General Assembly 2019</h3>
         </div>
-    </footer>
+    </footer>-->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
